# openworld

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  original prompts.txt
.cursor/plans/: platform-parity-matrix.md  spec-01-prompt-responses-and-product-decisions.md  spec-02-reference-architecture-and-runtime.md  spec-03-data-model-protocols-and-federation.md  spec-04-platforms-mcp-and-delivery-plan.md  spec-05-sensing-and-reconstruction-implementation.md  spec-06-swm-sync-and-protocol-implementation.md  spec-07-rendering-safety-and-interaction-implementation.md  spec-08-delivery-test-and-operations-implementation.md  spec-09-virtual-objects-ownership-and-avatars.md  spec-10-mvp-phase-0-local-room.md  spec-11-property-model-rights-and-notarization.md  spec-12-phase-0-implementation-plan.md  spec.md
.cursor/rules/: gaussian-splat-sources.mdc
assets/splat_catalog/: README.md
assets/splat_catalog/sources/: playcanvas_supersplat.json  sample_antimatter15.json
cmake/: QtInstall.cmake
core/: CMakeLists.txt
core/include/sos/: capture_frame.hpp  hash.hpp  local_swm.hpp  mesh_proxy.hpp  normalization_pipeline.hpp  room_record.hpp  sos_c_api.h  splat_asset.hpp  splat_decode.hpp  splat_import.hpp  zip_io.hpp
core/src/: hash.cpp  local_swm_store.cpp  mesh_proxy_generator.cpp  normalization_pipeline.cpp  room_bundle_io.cpp  room_record.cpp  sos_c_api.cpp  splat_asset.cpp  splat_decode.cpp  splat_import_ply.cpp  zip_io.cpp
core/tests/: CMakeLists.txt  smoke_test.cpp
scripts/: splat_sources_sync.sh
